Ensure tables are aligned in the center of the page

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.css
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.css
@@ -1,5 +1,5 @@
 .table-container {
-  max-width: 800px;
-  margin-left: 540px;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
