--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
@@ -1,5 +1,5 @@
 .table-container {
-  max-width: 1000px;
-  margin-left: 400px;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
